# DuckdbUI

./: .gitignore  README.md  pyproject.toml  startDuckDbApp.cmd
documents/: build.md  features.md  usage.html  usage.md
src/duckdbui/: __init__.py  main.py
