[project]
name = "duckdbui"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "tkinterdnd2>=0.4.3",
]

[project.scripts]
duckdbui = "duckdbui.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckdbui"]
